--- a/frontend-app/src/app/pages/home/components/dashboard/components/top-customers/top-customers.component.scss
+++ b/frontend-app/src/app/pages/home/components/dashboard/components/top-customers/top-customers.component.scss
@@ -48,8 +48,12 @@
 .customer-item {
   display: flex;
   align-items: center;
-  padding: 16px 24px;
+  padding: 12px 16px;
   border-bottom: 1px solid #f3f4f6;
+  
+  @media (min-width: 480px) {
+    padding: 16px 24px;
+  }
   
   &:last-child {
     border-bottom: none;
