--- a/frontend-app/src/app/pages/home/home.page.html
+++ b/frontend-app/src/app/pages/home/home.page.html
@@ -3,6 +3,8 @@
     <ion-content class="sidebar">
       <div class="brand">
         <div class="brand-icon">
+          <!-- Reemplaza src="assets/logo.png" con la ruta de tu imagen -->
+          <!-- <img src="assets/logo.png" alt="Logo" style="width: 100%; height: 100%; object-fit: contain;"> -->
           <ion-icon name="storefront"></ion-icon>
         </div>
         <div class="brand-info">
