--- a/frontend-app/src/app/pages/home/components/productos/modulos/formulario-restaurante/formulario-restaurante.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/formulario-restaurante/formulario-restaurante.component.html
@@ -3,11 +3,11 @@
     <div class="two-columns">
         <ion-item class="input-item">
             <ion-label position="stacked">Tiempo Preparación (min)</ion-label>
-            <ion-input type="number" formControlName="tiempoPreparacion" placeholder="15"></ion-input>
+            <ion-input type="text" inputmode="numeric" formControlName="tiempoPreparacion" placeholder="15" appNumericFormat></ion-input>
         </ion-item>
         <ion-item class="input-item">
             <ion-label position="stacked">Calorías (Kcal)</ion-label>
-            <ion-input type="number" formControlName="calorias" placeholder="500"></ion-input>
+            <ion-input type="text" inputmode="numeric" formControlName="calorias" placeholder="500" appNumericFormat></ion-input>
         </ion-item>
     </div>
     <ion-item class="input-item">
