--- a/frontend-app/src/app/pages/home/components/productos/modulos/formulario-servicios/formulario-servicios.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/formulario-servicios/formulario-servicios.component.html
@@ -3,7 +3,7 @@
     <div class="two-columns">
         <ion-item class="input-item">
             <ion-label position="stacked">Duración (min)</ion-label>
-            <ion-input type="number" formControlName="duracion"></ion-input>
+            <ion-input type="text" inputmode="numeric" formControlName="duracion" appNumericFormat></ion-input>
         </ion-item>
         <ion-item class="input-item">
             <ion-label position="stacked">Responsable</ion-label>
