--- a/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
@@ -176,19 +176,19 @@
           <ion-col size="12" size-sm="4">
             <ion-item class="input-item">
               <ion-label position="stacked">Precio Costo</ion-label>
-              <ion-input type="number" formControlName="precioCosto"></ion-input>
+              <ion-input type="text" inputmode="numeric" formControlName="precioCosto" appNumericFormat></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="12" size-sm="4">
             <ion-item class="input-item">
               <ion-label position="stacked">Precio Venta *</ion-label>
-              <ion-input type="number" formControlName="precioVenta"></ion-input>
+              <ion-input type="text" inputmode="numeric" formControlName="precioVenta" appNumericFormat></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="12" size-sm="4">
             <ion-item class="input-item">
               <ion-label position="stacked">Margen de Ganancia (%)</ion-label>
-              <ion-input type="number" formControlName="margenGanancia" readonly></ion-input>
+              <ion-input type="text" formControlName="margenGanancia" readonly></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -204,13 +204,13 @@
           <ion-col size="12" size-sm="4">
             <ion-item class="input-item">
               <ion-label position="stacked">Stock Actual *</ion-label>
-              <ion-input type="number" formControlName="stock"></ion-input>
+              <ion-input type="text" inputmode="numeric" formControlName="stock" appNumericFormat></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="12" size-sm="4">
             <ion-item class="input-item">
               <ion-label position="stacked">Stock Mínimo</ion-label>
-              <ion-input type="number" formControlName="stockMinimo"></ion-input>
+              <ion-input type="text" inputmode="numeric" formControlName="stockMinimo" appNumericFormat></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="12" size-sm="4">
