--- a/frontend-app/src/app/pages/home/components/clientes/components/client-edit-modal/client-edit-modal.component.html
+++ b/frontend-app/src/app/pages/home/components/clientes/components/client-edit-modal/client-edit-modal.component.html
@@ -43,16 +43,20 @@
       Información Financiera
     </div>
 
-    <ion-item>
-      <ion-label position="stacked">Crédito Máximo ($)</ion-label>
-      <ion-input formControlName="creditoMaximo" type="number" placeholder="0"></ion-input>
-    </ion-item>
-
-    <ion-item class="danger-zone">
-      <ion-label position="stacked" color="danger">Saldo Deuda Actual ($)</ion-label>
-      <ion-input formControlName="saldoDeuda" type="number" placeholder="0"></ion-input>
-      <ion-note slot="helper">Modifique esto solo para correcciones.</ion-note>
-    </ion-item>
+    <ion-row>
+      <ion-col size="6">
+        <ion-item class="input-item">
+          <ion-label position="stacked">Cupo Máximo ($)</ion-label>
+          <ion-input type="text" inputmode="numeric" formControlName="creditoMaximo" appNumericFormat></ion-input>
+        </ion-item>
+      </ion-col>
+      <ion-col size="6">
+        <ion-item class="input-item">
+          <ion-label position="stacked">Deuda Actual ($)</ion-label>
+          <ion-input type="text" inputmode="numeric" formControlName="saldoDeuda" appNumericFormat></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
 
     <div class="form-actions ion-margin-top">
       <ion-button expand="block" type="submit" [disabled]="editForm.invalid">
